--- a/src/app/pages/results/results.page.html
+++ b/src/app/pages/results/results.page.html
@@ -10,30 +10,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-segment (ionChange)="segmentChanged($event)" [(ngModel)]="special">
-    <ion-segment-button *ngFor="let special of specials"  value={{special._id}} checked="isChecked()">
-      <ion-label>{{special.name}}</ion-label>
+  <ion-segment (ionChange)="segmentChanged($event)">
+    <ion-segment-button *ngFor="let special of specials" value={{special._id}}>
+      {{special.name}}
     </ion-segment-button>
   </ion-segment>
   <ion-list>
     <ion-item *ngFor="let result of results">
-      {{result._id}}
-    </ion-item>
-    <ion-item *ngFor="let result of results">
-      {{result._id}}
-    </ion-item>
-    <ion-item *ngFor="let result of results">
-      {{result._id}}
-    </ion-item>
-
-    <ion-item *ngFor="let result of results">
-      {{result._id}}
-    </ion-item>
-    <ion-item *ngFor="let result of results">
-      {{result._id}}
-    </ion-item>
-    <ion-item *ngFor="let result of results">
-      {{result._id}}
+      {{result.time}}{{result.pos}}
     </ion-item>
   </ion-list>
 </ion-content>
