--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,50 @@
-<ion-app>
-  <ion-split-pane>
-    <ion-menu>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+<!-- nav -->
+<nav class="navbar navbar-expand navbar-dark bg-dark" >
+        <div class="container">
+                <mdb-navbar-brand>
+                    <a class="navbar-brand" href="#">
+                        <img src="/assets/img/icons/asl-white.svg" height="75" alt="">
+                      </a>
+                </mdb-navbar-brand>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
+                aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" *ngIf="currentUser">Spéciale</a>
+                  </li>
+                  <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" *ngIf="currentUser">Pilotes</a>
+                  </li>
+                  <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" *ngIf="currentUser">Déconnection</a>
+                  </li>
+                      
+                </ul>
+                </div>
+            </div>
+</nav>
+
+<!-- main app container -->
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <alert></alert>
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- credits -->
+<div class="text-center">
+    <p>
+        <a href="https://autosportdularagnais.com/" target="_top">Auto sport du Laragnais</a>
+    </p>
+</div>
