ajout appels api

--- a/src/app/pages/results/results.page.html
+++ b/src/app/pages/results/results.page.html
@@ -17,7 +17,7 @@
   </ion-segment>
   <ion-list>
     <ion-item *ngFor="let result of results">
-      {{result.time}}{{result.pos}}
+      {{result.nPos}}
     </ion-item>
   </ion-list>
 </ion-content>
