--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -8,22 +8,8 @@
 </ion-header>
 
 <ion-content>
-    <ion-item>
-        <ion-title>Carte Général</ion-title>
-    </ion-item>
-    <ion-img src="../../../assets/img/Carte Général_page-0001.jpg"></ion-img>
-    <ion-item>
-        <ion-title>Carte du Samedi</ion-title>
-    </ion-item>
-    <ion-img src="../../../assets/img/Carte Samedi_page-0001.jpg"></ion-img>
-    <ion-item>
-        <ion-title>Carte du Dimanche</ion-title>
-    </ion-item>
-    <ion-img src="../../../assets/img/Carte_Dimanche.jpg"></ion-img>
-    <ion-item>
-        <ion-title>Carte des parcs </ion-title>
-    </ion-item>
-    <ion-img src="../../../assets/img/Implantation parcs_page-0001.jpg"></ion-img>
+    <iframe  height="100%" width="100%" src="https://www.google.com/maps/d/embed?mid=163iWj0v7AWLtF9RGEjkA01PCuisWE6kr" name="iframe_a"></iframe>
+
 
 
 </ion-content>
