--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
       </ion-buttons>
@@ -9,7 +9,4 @@
 
 <ion-content>
     <iframe  height="100%" width="100%" src="https://www.google.com/maps/d/embed?mid=163iWj0v7AWLtF9RGEjkA01PCuisWE6kr" name="iframe_a"></iframe>
-
-
-
 </ion-content>
