--- a/src/app/pages/planning/planning.page.html
+++ b/src/app/pages/planning/planning.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
       </ion-buttons>
@@ -8,28 +8,28 @@
 </ion-header>
 
 <ion-content>
-    <ion-item>
+    <ion-item color="dark">
         <ion-title>Planning du Samedi</ion-title>
 
     </ion-item>
-    <h5>Première épreuve : le Col St Jean départ 9h06</h5>
-    <h5>Deuxième épreuve : le Col St Jean départ 13h12</h5>
+    <h5>Première épreuve : Le Col St Jean départ 9h06</h5>
+    <h5>Deuxième épreuve : Le Col St Jean départ 13h12</h5>
     <h5>Troisième épreuve : Sigoyer départ 14h28</h5>
-    <h5>Quatrième épreuve : le Col St Jean départ 16h54</h5>
+    <h5>Quatrième épreuve : Le Col St Jean départ 16h54</h5>
     <h5>Cinquième épreuve : Segoyer départ 18h10</h5>
-    <ion-item>
+    <ion-item color="dark">
           <ion-title>Planning du Dimanche</ion-title>
     </ion-item>
 
-    <h5>Sixième épreuve : le Col de Faye départ 8h59</h5>
+    <h5>Sixième épreuve : Le Col de Faye départ 8h59</h5>
     <h5>Septième épreuve : Chabestan départ 9h24</h5>
-    <h5>Huitième épreuve : le Col de Faye départ 11h49</h5>
+    <h5>Huitième épreuve : Le Col de Faye départ 11h49</h5>
     <h5>Dernière épreuve : Chabestan départ 12h14</h5>
 
-    <ion-item>
+    <ion-item color="dark">
         <ion-title>Distance des Courses</ion-title>
   </ion-item>
-  <h5>le Col St Jean fait 13,89 Km</h5>
+  <h5>Le Col St Jean fait 13,89 Km</h5>
   <h5>Sigoyer fait 14,75 Km</h5>
   <h5>Le col de Faye fait 8,485 Km</h5>
   <h5>Chabestan fait 14,11 Km</h5>
