--- a/src/app/pages/results/results.page.html
+++ b/src/app/pages/results/results.page.html
@@ -1,61 +1,58 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Results
+      Résultats
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-segment (ionChange)="segmentChanged($event)" scrollable>
+  <ion-segment (ionChange)="segmentChanged($event)" scrollable color="light" style="background-color: #272727; color:white">
     <ion-segment-button value="1" checked>
-        <ion-label>1-Col St Jean</ion-label>
+        <ion-label color="light">ES 1</ion-label>
     </ion-segment-button>
     <ion-segment-button value="2">
-        <ion-label>2-Col St Jean</ion-label>
+        <ion-label color="light">ES 2</ion-label>
     </ion-segment-button>
     <ion-segment-button value="3">
-        <ion-label>3-Sigoyer</ion-label>
+        <ion-label color="light">ES 3</ion-label>
     </ion-segment-button>
     <ion-segment-button value="4">
-        <ion-label>4-Col St Jean</ion-label>
+        <ion-label color="light">ES 4</ion-label>
     </ion-segment-button>
     <ion-segment-button value="5">
-        <ion-label>5-Sigoyer</ion-label>
+        <ion-label color="light"> ES 5</ion-label>
     </ion-segment-button>
     <ion-segment-button value="6">
-        <ion-label>6-Col de Faye</ion-label>
+        <ion-label color="light">ES 6 </ion-label>
     </ion-segment-button>
     <ion-segment-button value="7">
-        <ion-label>7-Chabestan</ion-label>
+        <ion-label color="light">ES 7</ion-label>
     </ion-segment-button>
     <ion-segment-button value="8">
-        <ion-label>8-Col de Faye</ion-label>
+        <ion-label color="light">ES 8</ion-label>
     </ion-segment-button>
     <ion-segment-button value="9">
-        <ion-label>9-Chabestan</ion-label>
+        <ion-label color="light">ES 9</ion-label>
     </ion-segment-button>
   </ion-segment>
   <ion-list>
       <ion-grid>
           <ion-row>
             <ion-col>
-                <h3>Position</h3>
+                <h6>Position</h6>
             </ion-col>
             <ion-col>
-               <h3>Temp</h3>
+               <h6>Temps</h6>
             </ion-col>
             <ion-col>
-                <h3>Ecart Premier</h3>
+                <h6>Écart Premier</h6>
             </ion-col>
             <ion-col>
-                <h3>Ecart précédant</h3>
-            </ion-col>
-            <ion-col>
-                <h3>Nom Pilote</h3>
+                <h6>Écart précédent</h6>
             </ion-col>
           </ion-row>
         </ion-grid>
